# wagtail-waggylabs

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  compose.ci.yaml  compose.dev.yaml  compose.prod.test.yaml  compose.prod.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
compose/dev/: Dockerfile  entrypoint.sh  env.sh  start.sh
compose/prod/: Dockerfile  env.sh  start.sh
compose/prod/nginx/: nginx.conf
compose/prod/web/: Dockerfile  entrypoint.sh  env.db.sh  env.sh  start.sh
waggylabs/: __init__.py  apps.py  forms.py  middleware.py  panels.py  snippets.py  urls.py  views.py  wagtail_hooks.py
waggylabs/admin/: panels.py
waggylabs/blocks/: accordion.py  base_body.py  blockquote.py  card_grid.py  carousel.py  citation.py  code.py  collapse.py  columns.py  cut.py  document.py  embed.py  equation.py  figure.py  footer_menu.py  icon.py  label.py  link_list.py  links.py  listing.py  markdown.py  math.py  page_info.py  post_archive.py  post_body.py  post_category_list.py  post_highlights.py  post_list.py  post_list_body.py  post_meta.py  post_series.py  post_tag_list.py  sidebar.py  sidebar_items.py  sidebar_tabs.py  styling.py  table.py  visuals.py  wrapper.py
waggylabs/extensions/: markdown.py
waggylabs/fields/: 0003_hitcount.py  __init__.py  markdown.py
waggylabs/management/commands/: createsuperuser_container.py  makemigrations.py
waggylabs/migrations/: 0001_initial.py  0002_create_sitepage.py  0003_alter_waggylabssettings_navbar_active_link_color_and_more.py
waggylabs/models/: __init__.py  base_page.py  post_category.py  post_list_page.py  post_page.py  post_tags.py  site_page.py  site_settings.py
waggylabs/static/waggylabs/css/: admin-styles.css  codehilite-styles.css  editor-styles.css  waggylabs.css
waggylabs/static/waggylabs/css/blocks/: codemirror-tweaks.css
waggylabs/static/waggylabs/css/widgets/: easymde-darkmode.css  easymde-highlight.css  easymde-tweaks.css  handsontable-tweaks.css
waggylabs/static/waggylabs/js/: color-mode.js  most-visible.js  prepare-page.js  scroll-spy.js
waggylabs/static/waggylabs/js/blocks/: code-adapter.js  icon-input-adapter.js  markdown-adapter.js  math-adapter.js  table-input-adapter.js
waggylabs/static/waggylabs/js/widgets/: color-controller.js  color-input.js  easymde-attach.js  easymde-controller.js  easymde-hint.js  icon-controller.js  icon-input.js  markdown-emoji.js  markdown-mathjax.js  markdown.js  table-input.js
waggylabs/templates/: 404.html  base.html
waggylabs/templates/waggylabs/blocks/form_template/: accordion.html  accordion_item.html  card.html  card_grid.html  carousel.html  carousel_item.html  citation.html  collapse.html  columns.html  external_link.html  footer_wrapper.html  internal_link.html  link_list.html  listing.html  post_list.html  post_meta.html  post_series.html  post_tag_list.html  sibling_post.html  sidebar_tabs.html  visuals.html
waggylabs/templates/waggylabs/blocks/template/: accordion.html  bare_table.html  base_body.html  blockquote.html  card.html  card_grid.html  carousel.html  citation.html  collapse.html  columns.html  cut.html  document.html  email.html  embed.html  equation.html  external_link.html  figure.html  footer_menu.html  footer_wrapper.html  info_text.html  internal_link.html  link_list.html  listing.html  page_info.html  post_archive.html  post_category_list.html  post_highlights.html  post_list.html  post_meta.html  post_series.html  post_tag_list.html  select.html  sidebar.html  sidebar_tabs.html  sidebar_text.html  table.html  table_figure.html  visuals.html  wrapper.html
waggylabs/templates/waggylabs/el_pagination/: current_link.html  next_link.html  page_link.html  previous_link.html
waggylabs/templates/waggylabs/menus/: footer_main_menu.html  main_menu.html  sub_menu.html
waggylabs/templates/waggylabs/pages/: base_page.html  post_list_page.html  post_page.html
waggylabs/templates/waggylabs/search/: search.html
waggylabs/templates/waggylabs/widgets/: color_input.html  input_cross_button.html  select_option.html
waggylabs/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
waggylabs/templates/wagtailadmin/userbar/: base.html
waggylabs/templatetags/: waggylabs_filters.py  waggylabs_tags.py
waggylabs/utils/: __init__.py  collect_emojis.py  collect_mathjax.py  utils.py
waggylabs/widgets/: __init__.py  code_block.py  color_input.py  icon_input.py  markdown_textarea.py  select_input.py  table_input.py
waggylabs_site/: settings.py  urls.py  wsgi.py
